# cpp-seed

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  Dockerfile  Readme.md  compiler.env  conanfile.txt  docker-compose.coverage.yml  docker-compose.debug.yml  init.sh
cmake/modules/: Coverage.cmake
include/: Window.h  engine.h  properties.h  window.h
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/sample/: my-project.cpp
modules/core/test/: CMakeLists.txt
modules/my-project/: CMakeLists.txt
modules/my-project/doc/: Doxyfile.in
modules/my-project/include/: foo.h
modules/my-project/sample/: my-project.cpp
modules/my-project/source/: foo.cpp
modules/my-project/test/: CMakeLists.txt  foo-test.cpp
src/: Window.cpp  main.cpp
